Issue 59: Dark Mode, added dark mode button to all pages, and dark and light versions of components, with persistence using localStorage, using CSS or inline modifications for the transitions

--- a/Frontend/src/Components/Calendar/Navbar.css
+++ b/Frontend/src/Components/Calendar/Navbar.css
@@ -18,7 +18,7 @@
   
   .chat-button-button {
     padding: 15px 25px;
-    font-size: 16px;    color: white;
+    font-size: 16px;    color: rgb(29, 29, 29);
     border: none;
     border-radius: 30px;
     cursor: pointer;
