--- a/Frontend/src/pages/HomePage.css
+++ b/Frontend/src/pages/HomePage.css
@@ -1,6 +1,20 @@
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;  /* Ensure full height */
+  background-color: #f5f5f5; /* Default background color, if not overwritten */
+  overflow: hidden;
+}
+
 .jumbotron {
     padding: 2rem 1rem;
     border-radius: 0.3rem;
+    /* flex-grow: 1; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center; */
   }
   
   /* Card styles */
@@ -54,24 +68,38 @@
   
   /* Light Mode Styles */
   body.light {
-    background-color: #ffffff;
+    background-color: #f8f9fa;
     color: #000000;
+    height: 100%
   }
   
   .container.light {
     background-color: #f8f9fa;
-    color: #212529;
+    color: rgb(33, 37, 41);
+
+    height: 100vh; 
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+    
   }
   
   /* Dark Mode Styles */
   body.dark {
-    background-color: #121212;
+    background-color: #1e1e1e;
     color: #ffffff;
+    height: 100%
   }
   
   .container.dark {
     background-color: #1e1e1e;
     color: #e0e0e0;
+
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+
   }
   
   /* Smooth Transitions */
